--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
 /*general */
 #app{
   margin: 0 auto 0 auto;
-  /* display:flex;
+  display:flex;
   flex-direction: column;
-  align-items: center; */
+  align-items: center;
 }
 
 #overview-heading, #total-followers, .dark-text, #followers, .followers-text, .title, .range, .numbers{
   font-family: 'Inter', sans-serif;
+}
+
+#social-media-dashboard :hover, #overview-dashboard :hover {
+  background-color: #e0e0e0;
+  cursor: pointer;
 }
 
 /*heading */
@@ -108,25 +113,25 @@ input:checked + .slider:before {
 
 #social-media-dashboard{
   display: grid;
-  grid-template-columns: repeat(4, 225px);
+  grid-template-columns: repeat(4, 220px);
   grid-auto-rows: minmax(100px, auto);
-  grid-gap:25px;
+  grid-gap:20px;
   margin: 0 auto 0 auto;
-  width:80%;
+  width:50%;
 }
 
 .media-box{
   z-index: 1;
   border-top: solid 0.4rem;
   background-color: #f8f8f8;
-  padding: 1.5rem;
+  padding: 2.5rem;
   display:flex;
   flex-direction: column;
   align-items: center;
 }
 
 #username{
-  font-size:1rem;
+  font-size:0.9rem;
   font-family: 'Inter', sans-serif;
 }
 
@@ -154,20 +159,21 @@ input:checked + .slider:before {
 
 /*overview dashboard*/
 
+#overview-heading{
+  margin:1rem;
+}
 
 #overview-dashboard{
   display: grid;
-  grid-template-columns: repeat(4, 300px);
+  grid-template-columns: repeat(4, 250px);
   grid-auto-rows: minmax(100px, auto);
-  grid-gap:25px;
-  /* margin: 0 auto 0 auto; */
-
+  grid-gap: 25px;
 }
 
 .overview-box{
   background-color: #f8f8f8;
   padding: 0 1.5rem 0 1.5rem;
-  margin: 1rem;
+  /* margin: 1rem; */
   text-align: justify;
 }
 
@@ -188,10 +194,6 @@ input:checked + .slider:before {
 .title{
   font-size: 1rem;
   white-space: nowrap;
-}
-
-.numbers{
-  margin-right:2rem;
 }
 
 .range{
